package structural.composite.menu;

public interface MenuComponent {
    void shoItem();
    double getPrice();
}
